# rbxlx-to-rojo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
.github/workflows/: build.yml  test.yml
src/: cli.rs  filesystem.rs  lib.rs  main.rs  non-tree-services.txt  respected-services.txt  structures.rs  tests.rs
test-files/baseplate/: output.json  source.rbxmx
test-files/baseplate/filesystem/: default.project.json
test-files/baseplate/filesystem/src/Workspace/: Baseplate.rbxmx  Camera.rbxmx  Terrain.rbxmx
test-files/blacklisted-classes/: README.md  source.rbxmx
test-files/folder-with-nondefault-value/: output.json  source.rbxmx
test-files/folder-with-nondefault-value/filesystem/src/Folder/: Value.rbxmx
test-files/folder-with-value/: output.json  source.rbxmx
test-files/folder-with-value/filesystem/src/Folder/: Value.rbxmx
test-files/folders-with-scripts/: output.json  source.rbxmx
test-files/line-runner/: output.json  source.rbxmx
test-files/line-runner/filesystem/: default.project.json
test-files/many-folders-in-one-parent/: output.json  source.rbxmx
test-files/script-descendant-tests/: output.json  source.rbxmx
test-files/script-with-character-inside/: output.json  source.rbxmx
test-files/script-with-character-inside/filesystem/: default.project.json
test-files/scripts-with-scripts/: output.json  source.rbxmx
test-files/scripts-with-scripts/filesystem/: default.project.json
test-files/sword/: output.json  source.rbxmx
test-files/sword/filesystem/src/ClassicSword/: Handle.rbxmx  Mesh.rbxmx  MouseIcon.client.lua  (+6 more)
(+48 files in other folders)
