[package]
name = "rbxlx-to-rojo"
version = "0.1.0"
authors = ["Kampfkarren"]
edition = "2018"

[dependencies]
lazy_static = "1.3"
rbx_dom_weak = "1.5"
rbx_reflection = "2" # TODO: This won't always be latest, and that's an issue
rbx_xml = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "0.6"