[package]
name = "rbxlx-to-rojo"
version = "0.1.0"
authors = ["Kampfkarren"]
edition = "2018"

[dependencies]
env_logger = "0.6"
log = "0.4"
rbx_dom_weak = "1.6"
rbx_reflection = "3" # TODO: This won't always be latest, and that's an issue
rbx_xml = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "0.6"