[package]
name = "rbxlx-to-rojo"
version = "0.1.0"
authors = ["Kampfkarren"]
edition = "2018"

[lib]
name = "rbxlx_to_rojo"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"
required-features = ["cli"]

[dependencies]
env_logger = "0.6"
lazy_static = "1.3"
log = "0.4"
rbx_dom_weak = "1.8"
rbx_reflection = "3" # TODO: This won't always be latest, and that's an issue
rbx_xml = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
nfd = { git = "https://github.com/saurvs/nfd-rs", optional = true }

[dev-dependencies]
pretty_assertions = "0.6"

[features]
cli = ["nfd"]
